@@ -164,3 +164,5 @@ issue 218:
 
 issue 219:
     bug: errors with block showing are printed multiply times in BlockItemGenerator
+
+[220]
